--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             "DaeweDash", "MarkiXonGD", "matyi0", "Gerimatod", "O10one", "gergo123456", "chirpie", 
             "kaministorm", "wMixy", "Serpentical", "Shyze", "ShiveringStars0", "pPaarketta", "Morzsika",
             "Libakoptato", "Kisgrofo", "kacsloz", "GDWaterGMD", "BVviktor", "Bandi006", "BaloghRicsi",
-            "Balint1117", "AtiDaNub"
+            "Balint1117", "AtiDaNub", "rolidemuth"
         ];
 
         const HUNGARIAN_PLAYERS = [...new Set(RAW_PLAYERS)];
