--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                         <img src="src/creator_points.png" class="icon-img" alt=""> Creator Points
                     </a>
                 </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link" data-category="rated">
+                        <img src="src/safe.png" class="icon-img" alt=""> Rated Levels
+                    </a>
+                </div>
             </div>
         </nav>
 
@@ -68,6 +73,7 @@
             <div class="category-section" id="usercoins"><div class="loading-container" id="loading-usercoins"></div><div class="player-grid" id="grid-usercoins"></div></div>
             <div class="category-section" id="demons"><div class="loading-container" id="loading-demons"></div><div class="player-grid" id="grid-demons"></div></div>
             <div class="category-section" id="creator"><div class="loading-container" id="loading-creator"></div><div class="player-grid" id="grid-creator"></div></div>
+            <div class="category-section" id="rated"><div class="loading-container" id="loading-rated"></div><div class="player-grid" id="grid-rated"></div></div>
         </div>
     </div>
 
