--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div id="bg-animation-container"></div>
 
     <div class="container">
-        <h1 class="main-header">Magyar GD Ranglista</h1>
+        <h1 class="main-header">
+            <span class="hun-red">Magyar</span> 
+            <span class="hun-white">GD</span> 
+            <span class="hun-green">Ranglista</span>
+        </h1>
 
         <nav class="nav-menu">
             <div class="d-flex flex-wrap justify-content-center">
